# timemachine

./: .gitignore  Devdockerfile  Dockerfile  README.md  jenkinsfile.groovy
docker/aws-sdk-cpp-s3/: Dockerfile
docker/dev/: Dockerfile
docker/grpc-aws-sdk-cpp/: Dockerfile
docker/rocksdb-cloud-grpc/: Dockerfile
docker/total/: Dockerfile
docker/ubuntu/: Dockerfile
pythonclient/: .gitignore  Makefile
pythonclient/python-package/: setup.py  timeMachine_pb2.py  timeMachine_pb2_grpc.py
scalaClient/: build.sbt
scalaClient/src/main/scala/: TimeMachineClient.scala
scalaClient/src/test/resources/: logback-test.xml
scalaClient/src/test/scala/: TimeMachineClientSpec.scala
scalaClient/src/test/scala/hydrosphere/timemachine/: HttpApiSpec.scala  ReqtoreDockerKit.scala  TimeMachineClientSpec.scala
src/: CMakeLists.txt  CloudDBClient.cpp  CloudDBClient.h  Config.cpp  Config.h  DbClient.cpp  DbClient.h  DbId.cpp  DbId.h  GRPCServer.cpp  GRPCServer.h  HTTPServer.cpp  HTTPServer.h  IDComparator.cpp  IDComparator.h  LocalDBClient.cpp  LocalDBClient.h  Makefile  Server.cpp  Server.h  cmake_install.cmake  fake.cpp  reqstore.cpp  timemachine.cpp
src/cmake/: FindGTest.cmake  FindHydroServingProto.cmake  FindPoco.cmake  FindRocksDB.cmake  FindgRPC.cmake  Findspdlog.cmake
src/cmake_externalproject/: CMakeLists.txt
src/handlers/: GetRangeHandler.cpp  GetRangeHandler.h  HandlerFactory.cpp  HandlerFactory.h  HealthHandler.cpp  HealthHandler.h  InfoHandler.cpp  InfoHandler.h  NotFoundHandler.cpp  NotFoundHandler.h  SaveHandler.cpp  SaveHandler.h  StatusHandler.cpp  StatusHandler.h  SubsamplingHandler.cpp  SubsamplingHandler.h
src/proto/: timeMachine.proto
src/utils/: RepositoryUtils.cpp  RepositoryUtils.h
tsclient/recstore-ts/: package-lock.json
tsclient/recstore-ts/src/: index.ts
tsclient/recstore-ts/src/__tests__/: main.spec.ts
